landing acabada, salvo paginas adicionales

--- a/src/pages/crear-inversor.astro
+++ b/src/pages/crear-inversor.astro
@@ -9,7 +9,7 @@ import Layout from '../layouts/Layout-registro.astro';
     <div id="blur"></div>
     <a id="cerrar" href="/index.html"><img id="x" src="Imagenes/Registro/x.svg"></a>
     <header>
-      <h1>Finaliza tu Perfil</h1>
+      <h1>Completa tu Perfil</h1>
       <p id="subtexto-principal">Completa los últimos campos de tu perfil para poder disfrutar<br> plenamente de todas las funciones de la app</p>
     </header>
     <form id="investorForm" method="post">
@@ -215,11 +215,11 @@ import Layout from '../layouts/Layout-registro.astro';
     display: flex;
     align-self: center;
     z-index: 4;
-    flex-direction: column; /* Cambiar a columna para mejor distribución */
+    flex-direction: column;
   }
 
   input{
-    width: 89%;
+    width: 85%;
     height: inherit;
     padding: 0px 8px 1px 0px;
     color: rgb(255, 255, 255);
