--- a/src/pages/registro.astro
+++ b/src/pages/registro.astro
@@ -74,6 +74,9 @@ import Layout from '../layouts/Layout-registro.astro';
                     // Log del token si se encuentra en la respuesta
                     const token = document.cookie.split('; ').find(row => row.startsWith('token='));
                     console.log('Token guardado en la cookie:', token ? token.split('=')[1] : 'No se encontró el token');
+                    localStorage.setItem('userId', response.data.userId);
+                    console.log('Usuario registrado, ID guardado:', response.data.userId);
+
     
                     // Redirigir a la página de selección de rol
                     window.location.href = 'http://localhost:4321/seleccionar-rol';
