--- a/src/pages/registro.astro
+++ b/src/pages/registro.astro
@@ -22,7 +22,7 @@ import Layout from '../layouts/Layout-registro.astro';
             </div>
             <button id="submit-btn" type="submit"><img id="flecha" src="Imagenes/Registro/Flecha.svg"></button>
         </form>
-        <button id="iniciar" type="button"><img id="google" src="Imagenes/Registro/Inicia sesion con google.svg"></button>
+        <!--<button id="iniciar" type="button"><img id="google" src="Imagenes/Registro/Inicia sesion con google.svg"></button> -->
         <p class="texto-abajo"><span id="regular">Si ya te has registrado previamente,</span><a href="/inicio-sesion" id="texto-abajo">Inicia Sesión</a></p>
     </body>
     <script>
