--- a/src/pages/crear-startup.astro
+++ b/src/pages/crear-startup.astro
@@ -41,7 +41,7 @@ import Layout from '../layouts/Layout-registro.astro';
 
       <div id="step6" class="financiation-container" style="display: none">
         <h1 id="titulo2">Ronda de Financiación</h1>
-        <div class="financiation-card" data-value="autoinversion">
+        <div class="financiation-card" data-value="Autoinversión">
           <lord-icon
           src="https://cdn.lordicon.com/nkfxhqqr.json"
           trigger="hover"
@@ -50,7 +50,7 @@ import Layout from '../layouts/Layout-registro.astro';
           </lord-icon>
           <p>Autoinversion</p>
         </div>
-        <div class="financiation-card" data-value="pre-seed">
+        <div class="financiation-card" data-value="Pre-Seed">
           <lord-icon
             src="https://cdn.lordicon.com/ysonqgnt.json"
             trigger="hover"
@@ -59,7 +59,7 @@ import Layout from '../layouts/Layout-registro.astro';
           </lord-icon>
           <p id="texto2">Pre-Seed</p>
         </div>
-        <div class="financiation-card" data-value="seed">
+        <div class="financiation-card" data-value="Seed">
           <lord-icon
             src="https://cdn.lordicon.com/lsfszdzd.json"
             trigger="hover"
@@ -68,7 +68,7 @@ import Layout from '../layouts/Layout-registro.astro';
           </lord-icon>
           <p id="texto2">Seed</p>
         </div>
-        <div class="financiation-card" data-value="serie-a">
+        <div class="financiation-card" data-value="Serie A">
           <lord-icon
             src="https://cdn.lordicon.com/abwrkdvl.json"
             trigger="hover"
@@ -77,7 +77,7 @@ import Layout from '../layouts/Layout-registro.astro';
           </lord-icon>
           <p id="texto2">Serie A</p>
         </div>
-        <div class="financiation-card" data-value="serie-b">
+        <div class="financiation-card" data-value="Serie B">
           <lord-icon
             src="https://cdn.lordicon.com/qhsqomjd.json"
             trigger="hover"
@@ -86,7 +86,7 @@ import Layout from '../layouts/Layout-registro.astro';
           </lord-icon>
           <p id="texto2">Serie B</p>
         </div>
-        <div class="financiation-card" data-value="serie-c">
+        <div class="financiation-card" data-value="Serie C">
           <lord-icon
             src="https://cdn.lordicon.com/trkmlure.json"
             trigger="hover"
